# git-replay

./: .editorconfig  .gitignore  .gitleaks.toml  .lintro-config.yaml  .lintro-ignore  .osv-scanner.toml  .prettierignore  .prettierrc.json  .yamllint  CONTRIBUTING.md  README.md  SECURITY.md  config.toml  pyproject.toml
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  dependency-review.yml  deploy-pages.yml  quality-ci.yml  scorecards.yml  security-audit.yml  semantic-pr-title.yml  test-ci.yml  validate-action-pinning.yml
docs/adr/: 0001-render-targets.md
src/git_replay/: __init__.py  aggregate.py  cli.py  config.py  fetch.py  manifest.py  model.py  repo.py
src/git_replay/render/: __init__.py  heatmap_svg.py  page.py  palette.py  replay_svg.py  repos_svg.py  stat_svg.py  theme.py
tests/: conftest.py  test_aggregate.py  test_cli.py  test_config.py  test_fetch.py  test_manifest.py  test_model.py  test_smoke.py
tests/fixtures/: alpha.txt  repos_page.json  single.txt
tests/render/: test_heatmap_svg.py  test_page.py  test_palette.py  test_replay_svg.py  test_repos_svg.py  test_stat_svg.py  test_theme.py
tests/render/fixtures/: page.html
